// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heavy heading correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.125rem;
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-weight: 1000;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

@media (min-width:740px) {
  .c0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

<h3
  className="c0"
  color="inherit"
  size="s"
>
  Heading 3 heavy
</h3>
`;

exports[`renders high heading correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.125rem;
  font-size: 1.25rem;
  line-height: 1.5rem;
  line-height: 5;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

@media (min-width:740px) {
  .c0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

<h3
  className="c0"
  color="inherit"
  height="5"
  size="s"
>
  Heading 3 high
</h3>
`;

exports[`renders large heading correctly 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  font-size: 1.25rem;
  line-height: 1.5rem;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

@media (min-width:740px) {
  .c0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

<h3
  className="c0"
  color="inherit"
  size="l"
>
  Heading 3 large
</h3>
`;

exports[`renders xl paragraph with Anton font correctly 1`] = `
.c0 {
  font-size: 1.875rem;
  line-height: 1.875rem;
  font-size: 1rem;
  line-height: 1.25rem;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: 'Anton',Impact,sans-serif;
}

@media (min-width:740px) {
  .c0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

<p
  className="c0"
  color="inherit"
  size="xl"
>
  My paragraph xl and font Anton
</p>
`;

exports[`renders xl yellow paragraph correctly 1`] = `
.c0 {
  font-size: 1.875rem;
  line-height: 1.875rem;
  font-size: 1rem;
  line-height: 1.25rem;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #FFE400;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

@media (min-width:740px) {
  .c0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

<p
  className="c0"
  color="yellow"
  size="xl"
>
  My paragraph xl and yellow
</p>
`;
